--- a/src/app/pages/detalle-producto/detalle-producto.component.css
+++ b/src/app/pages/detalle-producto/detalle-producto.component.css
@@ -89,7 +89,7 @@
   }
 
   @media screen and (max-width: 766px) {
-  .product-details {
+  .main-product-details {
     flex-direction: column;
     gap: 24px;
   }
