--- a/src/app/shared/animated-vertical-carousel/animated-vertical-carousel.component.html
+++ b/src/app/shared/animated-vertical-carousel/animated-vertical-carousel.component.html
@@ -1,7 +1,7 @@
 <div class="letter-list-container left">
     <ul class="letter-list">
     <li class="letter-figure" *ngFor="let image of letterImagesLeft">
-        <img class="letter-image" [src]="image.url" [alt]="image.name" />
+        <img loading="lazy" class="letter-image" [src]="image.url" [alt]="image.name" />
          <h3 class="letter-title">{{ image.name }}</h3>
       </li>
     </ul>
@@ -10,7 +10,7 @@
 <div class="letter-list-container middle">
     <ul class="letter-list">
         <li class="letter-figure" *ngFor="let image of letterImagesMiddle">
-            <img class="letter-image" [src]="image.url" [alt]="image.name" />
+            <img loading="lazy" class="letter-image" [src]="image.url" [alt]="image.name" />
              <h3 class="letter-title">{{ image.name }}</h3>
           </li>
         </ul>
@@ -19,7 +19,7 @@
     <div class="letter-list-container right">
         <ul class="letter-list">
             <li class="letter-figure" *ngFor="let image of letterImagesRight">
-                <img class="letter-image" [src]="image.url" [alt]="image.name" />
+                <img loading="lazy" class="letter-image" [src]="image.url" [alt]="image.name" />
                  <h3 class="letter-title">{{ image.name }}</h3>
               </li>
             </ul>
