cookies policy updated

--- a/src/app/pages/politica-cookies/politica-cookies.component.html
+++ b/src/app/pages/politica-cookies/politica-cookies.component.html
@@ -46,11 +46,11 @@
 
 <p>SEGÚN LA ENTIDAD QUE LO GESTIONA</p>
 
-<p>Cookies propias:</p>
+<p><b>Cookies propias:</b></p>
 
 <p>Son aquellas que se envían al equipo terminal del Usuario desde un equipo o dominio gestionado por el propio editor y desde el que se presta el servicio solicitado por el Usuario.</p>
 
-<p>Cookies de terceros:</p>
+<p><b>Cookies de terceros:</b></p>
 
 <p>Son aquellas que se envían al equipo terminal del Usuario desde un equipo o dominio que no es gestionado por el editor, sino por otra entidad que trata los datos obtenidos través de las cookies.</p>
 
@@ -86,16 +86,13 @@
 
 <h2 class="element-title policy-title">Detalle de cookies utilizadas en esta web</h2>
 
-<p><!-- tk_ai
-Stores a randomly generated, anonymous ID. It is only used in the admin area and is used for general analytics tracking. -->
-Categoría: Analytics.
-Duración: sesión.
-Cloudinary
-<!-- Política de privacidad: https://jetpack.com/support/cookies/ --></p>
+<p>
+Cookies de tercero Google Analitycs | Categoría: análisis | Duración: sesión.
+</p>
 
 <h2 class="element-title policy-title">Modificaciones en esta política</h2>
 <p>Es posible que actualicemos la Política de cookies de nuestro Sitio Web periódicamente. Por ello, te recomendamos revisar esta política cada vez que accedas a nuestro Sitio Web con el objetivo de estar adecuadamente informado sobre cómo y para qué utilizamos las cookies.</p>
-<p>Esta Política de cookies ha sido modificada el 17 de febrero de 2025.</p>
+<p>Esta Política de cookies ha sido modificada el 9 de julio de 2025.</p>
 
 </div>
 </main>
