--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,14 +3,18 @@ padding: 100px 0
 }
 
 .vertical-carousel-section {
-display: flex;
+  width: 100%;
 background-color: var(--color-black); 
-padding-left: 52px;
-padding-right: 52px;
-padding-bottom: 0px;
-padding-top: 0px;
-gap: 52px
+padding: 0 52px;
 }
+
+.vertical-carousel-container { 
+  width: 80%;
+  margin: auto; 
+display: flex; 
+gap: 52px;
+}
+
 
 
 .vertical-carousel-section-texts {
