--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,12 +8,14 @@
   
 
     <section class="vertical-carousel-section">
+      <div class="vertical-carousel-container">
       <div class="vertical-carousel-section-texts">
       <h2 class="title">Amplia gama de letras corpóreas</h2>
       <p>Desde letras de PVC hasta letras y números luminosos de metacrilato y aluminio, letras de madera, etc. Diseños minimalistas o personalizados que se integran en cualquier espacio. Solicita tu presupuesto.</p>
       <app-button [buttonText]="'Ver todas'" [buttonLink]="'/catalogo'"   ></app-button>
     </div>
     <app-animated-vertical-carousel></app-animated-vertical-carousel> 
+    </div>
   </section>
 
   <section class="centered-section home-section">
