--- a/src/app/pages/detalle-producto/detalle-producto.component.html
+++ b/src/app/pages/detalle-producto/detalle-producto.component.html
@@ -1,6 +1,6 @@
 
 <ng-template #noproduct>
-    <app-not-found [notFoundText]="'No hay productos con este nombre'"></app-not-found>
+    <app-not-found [notFoundText]="'No hay rótulos con este nombre'"></app-not-found>
 </ng-template>
 
 <ng-container *ngIf="productSelectedData; else noproduct">
