--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
  <app-home-carousel></app-home-carousel>  
     <section class="centered-section home-section">
       <h2 class="page-title centered-text">Rotulación y letreros para tiendas y más</h2>
-      <app-cards [cardsClass]="'cards-grid'" [cardElements]="categories$ | async"></app-cards>
+      <app-category-cards [cardElements]="categories$ | async"></app-category-cards>
     </section>
 
   
