--- a/src/app/pages/home/components/home-carousel/home-carousel.component.html
+++ b/src/app/pages/home/components/home-carousel/home-carousel.component.html
@@ -8,10 +8,17 @@
  
   </div>
 
-        <img fetchpriority="high" class="banner-img" [src]="carouselImages[imageIndex]" 
+        <video width="600" src="https://res.cloudinary.com/dxuseyfxa/video/upload/v1752507839/fabricacion-rotulos-learoy_bmcnke.mp4" type="video/mp4" 
+        class="banner-img"
+      loop autoplay>
+    </video> 
+        
+        <!-- <img fetchpriority="high" class="banner-img" [src]="carouselImages[imageIndex]" 
         [alt]="'rotulos-learoy'" />
+
+        
 
         <ul class="carousel-dots">
             <li class="carousel-dot" [class.active]="i === imageIndex" *ngFor="let carouselImage of carouselImages; let i = index" (click)="carouselImageChange(i)"></li>
         </ul>
-     
+      -->
