--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,7 @@ a {
   }
   .element-title {
     font-size: 20px;
-    padding: 0 20px;
+    padding: 20px;
     font-weight: 500;
   }
   .element-title::first-letter {
