--- a/src/app/pages/pagina-no-encontrada/pagina-no-encontrada.component.html
+++ b/src/app/pages/pagina-no-encontrada/pagina-no-encontrada.component.html
@@ -1,3 +1,3 @@
- <main id="pagina-no-encontrada" class="not-found-page centered-main">
+ <main class="not-found-page centered-main">
  <app-not-found [notFoundText]="'Página no encontrada'"></app-not-found>
 </main>
