--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,10 +9,12 @@
 
      
       <!-- <li><a  (click)="closeBurguer()" [routerLink]="['/sectores']">Sectores</a></li> -->
-    
+     <li><a (click)="closeBurguer()" [routerLink]="['/rotulos-luminosos']">Luminosos</a></li>
+     <li><a (click)="closeBurguer()" [routerLink]="['/banderolas-personalizadas']">Banderolas</a></li>
+      <li><a (click)="closeBurguer()" [routerLink]="['/letreros-neon']">Neón</a></li>
+     <li><a (click)="closeBurguer()" [routerLink]="['/letras-corporeas']">Letras corpóreas</a></li> 
       <li><a (click)="closeBurguer()" [routerLink]="['/nosotros']">Nosotros</a></li>
       <li><a  (click)="closeBurguer()" [routerLink]="['/casos-de-exito']">Casos</a></li>
-      <li><a (click)="closeBurguer()" [routerLink]="['/contacto']">Contacto</a></li>
     </ul>
   </nav>
 
