--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -4,8 +4,8 @@
   } 
   
   a {
-    font-size: 22px;
-    text-transform: uppercase;
+    font-size: 20px;
+    /* text-transform: uppercase; */
     color: var(--color-white);
   }
   
