video autoplay updated

--- a/src/app/pages/home/components/home-carousel/home-carousel.component.html
+++ b/src/app/pages/home/components/home-carousel/home-carousel.component.html
@@ -10,9 +10,11 @@
 
         <video width="600" src="https://res.cloudinary.com/dxuseyfxa/video/upload/v1752507839/fabricacion-rotulos-learoy_bmcnke.mp4" type="video/mp4" 
         class="banner-img"
-      loop autoplay>
+      [autoplay]="true"  [loop]="true">
     </video> 
         
+    
+
         <!-- <img fetchpriority="high" class="banner-img" [src]="carouselImages[imageIndex]" 
         [alt]="'rotulos-learoy'" />
 
