autoplay function added

--- a/src/app/pages/home/components/home-carousel/home-carousel.component.html
+++ b/src/app/pages/home/components/home-carousel/home-carousel.component.html
@@ -8,9 +8,8 @@
  
   </div>
 
-        <video width="600" src="https://res.cloudinary.com/dxuseyfxa/video/upload/v1752507839/fabricacion-rotulos-learoy_bmcnke.mp4" type="video/mp4" 
-        class="banner-img"
-      [autoplay]="true"  [loop]="true">
+        <video  #videoEl width="600" src="https://res.cloudinary.com/dxuseyfxa/video/upload/v1752507839/fabricacion-rotulos-learoy_bmcnke.mp4" type="video/mp4" 
+        class="banner-img" autoplay loop muted playsinline>
     </video> 
         
     
