--- a/src/app/shared/category-cards/category-cards.component.css
+++ b/src/app/shared/category-cards/category-cards.component.css
@@ -21,6 +21,7 @@
    .card-image {
     object-fit: cover;
    width: 100%; 
+   max-height: 350px;
    border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   }
@@ -30,6 +31,19 @@
     font-weight: 600;
   }
 
+.category-card-description-container {
+  padding: 0 30px 30px 30px;
+}
+
   .category-card-description {
-    padding: 0 30px 30px 30px
+    display: -webkit-box;
+  -webkit-line-clamp: 5;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   }
+
+  /* .category-card-description-container::after {
+  content: ' →';
+  font-weight: bold;
+  margin-left: 90%;
+} */
