--- a/src/app/shared/cards/cards.component.html
+++ b/src/app/shared/cards/cards.component.html
@@ -1,5 +1,5 @@
-<ul [ngClass]="cardsClass">
-<li class="card-figure" [ngClass]="getCardClass(element)" *ngFor="let element of cardElements" (click)="selectElement(element)">
+<ul [ngClass]="cardsClass" *ngIf="cardElements">
+<li class="card-figure" [ngClass]="getCardClass(element)" *ngFor="let element of cardElements | order" (click)="selectElement(element)">
     <img class="card-image" [src]="imagePrefix+getSrcImage(element)" [alt]="element.name" />
      <h3 class="element-title centered-text">{{ element.name }}</h3>
   </li>
