--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,7 @@ padding: 100px 0
 
 .vertical-carousel-section {
   width: 100%;
-background-color: var(--color-black); 
+background-image: url(/frame_80\ \(1\).webp);
 padding: 0 52px;
 }
 
