--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -1,6 +1,6 @@
-  nav {
+nav {
   padding: 6px;
-  background-color: rgb(2, 21, 38, 0.6);
+  background-color: rgba(1, 90, 164, 0.1); 
 }
 
 .nav-links {
@@ -9,18 +9,15 @@
     justify-content: space-around;
     width: 80%;
     margin: auto;
- 
   } 
   
   a {
     font-size: 20px;
-    /* text-transform: uppercase; */
-    color: var(--color-white);
+    color: var(--color-black)
   }
   
   a:hover {
-    color: var(--color-blue);
-    text-shadow: var(--white-shadow);
+    text-shadow: var(--black-shadow);
   }
 
   li {
