--- a/src/app/pages/nosotros/nosotros.component.html
+++ b/src/app/pages/nosotros/nosotros.component.html
@@ -12,6 +12,7 @@
 </div>
            
         </section>
+   <app-keywords-animation></app-keywords-animation>
         <app-contact-banner></app-contact-banner>
         </main>        
 
