--- a/src/app/shared/search-input/search-input.component.html
+++ b/src/app/shared/search-input/search-input.component.html
@@ -1,5 +1,6 @@
-  <i aria-hidden="true" class="fa-solid fa-magnifying-glass"><span class="sr-only">Escribir nombre de producto para buscar</span></i>
+  <i aria-hidden="true" class="fa-solid fa-magnifying-glass"></i>
   <input
+        aria-label="Escribir nombre de producto para buscar"
         class="search-input"
         placeholder="Buscar..."
         type="search"
