--- a/src/app/shared/search-input/search-input.component.html
+++ b/src/app/shared/search-input/search-input.component.html
@@ -4,6 +4,8 @@
         class="search-input"
         placeholder="Buscar..."
         type="search"
+        id="search"
+        name="search"
         #search
         (input)="listenInput($event)"
         (keydown.enter)="submitSearch(search.value)"
