--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,6 +6,7 @@ padding: 100px 0
   width: 100%;
 background-image: url(/frame_80\ \(1\).webp);
 padding: 0 52px;
+overflow: hidden;
 }
 
 .vertical-carousel-container { 
@@ -20,7 +21,7 @@ gap: 52px;
   flex-direction: column;
   justify-content: center;
   gap: 30px;
-  color: var(--color-white)
+  color: var(--color-white);
 }
 
 /* .customers-section {
@@ -31,8 +32,11 @@ gap: 52px;
 
   @media screen and (max-width: 766px) {
 
+     /* .vertical-carousel-container {
+        flex-direction: column;
+  }
+
     .vertical-carousel-section {
-       flex-direction: column;
        padding-left: 0;
        padding-right: 0;
        width: 100vw;
@@ -41,5 +45,5 @@ gap: 52px;
 
   .vertical-carousel-section-texts {
     padding: 32px;
-}
+} */
 }
