--- a/src/app/shared/category-cards/category-cards.component.css
+++ b/src/app/shared/category-cards/category-cards.component.css
@@ -47,3 +47,15 @@
   font-weight: bold;
   margin-left: 90%;
 } */
+
+@media screen and (max-width: 499px) {
+.card-figure {
+ max-width: 90%;
+ }
+}
+
+@media screen and (min-width: 499px) and (max-width: 766px) {
+.card-figure {
+ max-width: 45%;
+ }
+}
