--- a/src/app/shared/search-input/search-input.component.css
+++ b/src/app/shared/search-input/search-input.component.css
@@ -2,7 +2,7 @@
     border-radius: 39px;
     background-color: rgb(226, 226, 226, 0.1);
     padding: 12px 22px;
-    min-width: 500px;
+    width: 500px;
     border: 1px solid  rgb(2,21,38,0.6);
 }
 
@@ -34,3 +34,32 @@ input[type="search" i]::-webkit-search-cancel-button {
  background-size: contain;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23ffffff' d='M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c-9.4 9.4-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0z'/%3E%3C/svg%3E");
 } 
+
+  @media screen and (max-width: 766px) {
+    :host {
+  max-width:90vw;
+  background-color: rgba(1, 90, 164, 0.1); 
+    }
+
+    :host::before {
+        content: '';
+            position: absolute;
+    top: 13vh;
+    left: 0;
+    width: 100%;
+    height: 49px;
+     z-index: -1;
+ background-color: white;
+ box-shadow:  var(--black-shadow);
+ padding: 12px;
+ width: 100vw;
+    } 
+
+    .search-input {
+        max-width:90vw;
+    }
+
+    .fa-magnifying-glass, .search-input::placeholder {
+    color: var(--color-black);
+}
+ } 
