--- a/src/app/pages/pagina-no-encontrada/pagina-no-encontrada.component.html
+++ b/src/app/pages/pagina-no-encontrada/pagina-no-encontrada.component.html
@@ -1,3 +1,5 @@
  <main class="not-found-page centered-main">
- <app-not-found [notFoundText]="'Página no encontrada'"></app-not-found>
+    <p class="text-title">Página no encontrada</p>
+    <p class="not-found-text">Parece que algún enlace o ruta no existe</p>
+<app-button [buttonText]="'Volver a Inicio'"></app-button>
 </main>
