--- a/src/app/pages/categorias/categorias.component.html
+++ b/src/app/pages/categorias/categorias.component.html
@@ -11,7 +11,7 @@
 <app-filter-buttons [categorySelectedName]="categorySelectedName" (categorySelected)="onCategorySelectedChange($event)"></app-filter-buttons>
     <div *ngFor="let category of categories$ | async | filter: categorySelectedName; let i = index">
       <h2 class="subtitle centered-text">{{category.name}}</h2>
-     <app-cards *ngIf="isCategory(category)" [cardElements]="category.products" [categorySelectedSlug]="category.slug" [cardsClass]="'cards-grid'"></app-cards>
+     <app-cards *ngIf="isCategory(category)" [cardElements]="category.products" [cardsClass]="'cards-grid'"></app-cards>
   </div>
 
   </section>
