--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -13,7 +13,7 @@
         referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
     </div>
-    <app-contact-form></app-contact-form>
+    <app-contact-form class="contact-form"></app-contact-form>
   
 </div>
 </section >
