--- a/src/app/shared/search-input/search-input.component.css
+++ b/src/app/shared/search-input/search-input.component.css
@@ -18,7 +18,8 @@
  background: transparent;
     padding-left: 22px;
     color: var(--color-white);
-    width: 95%
+    width: 95%;
+    max-width: 70vw;
 }
 
 .search-input::placeholder {
@@ -37,7 +38,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
   @media screen and (max-width: 766px) {
     :host {
-  max-width:90vw;
+  max-width:90vw; 
   background-color: rgba(1, 90, 164, 0.1); 
     }
 
@@ -52,11 +53,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
  background-color: white;
  box-shadow:  var(--black-shadow);
  padding: 12px;
- width: 100vw;
-    } 
-
-    .search-input {
-        max-width:90vw;
+width: 100vw; 
     }
 
     .fa-magnifying-glass, .search-input::placeholder {
