--- a/src/app/pages/casos/casos.component.css
+++ b/src/app/pages/casos/casos.component.css
@@ -80,9 +80,9 @@ transform: var(--hover-scale);
   pointer-events: none;
   }
 }
-/* 
+
 @media screen and (min-width: 767px) and (max-width: 1890px) {
     .case-image {
       max-width: 100%; 
   }
-} */
+} 
