--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -31,8 +31,7 @@ gap: 52px;
 
 
   @media screen and (max-width: 766px) {
-
-     /* .vertical-carousel-container {
+ .vertical-carousel-container {
         flex-direction: column;
   }
 
@@ -45,5 +44,5 @@ gap: 52px;
 
   .vertical-carousel-section-texts {
     padding: 32px;
-} */
+} 
 }
