--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -5,7 +5,7 @@ nav {
 
 .nav-links {
     display: flex;
-    gap: 60px;
+    gap: 30px;
     justify-content: space-around;
     width: 80%;
     margin: auto;
@@ -69,6 +69,10 @@ nav {
   }
 
  @media screen and (min-width: 767px) and (max-width: 1200px) {
+ .nav-links {
+   width: 100%;
+     }
+
     .nav-links a {
   font-size: 16px;
     }
