loader position updated

--- a/src/app/core/components/loader/loader.component.html
+++ b/src/app/core/components/loader/loader.component.html
@@ -1,2 +1,4 @@
- <i class="fa-solid fa-spinner fa-spin-pulse"></i>
+<div class="loader-container">
+    <i class="fa-solid fa-spinner fa-spin-pulse"></i>
+    </div>
 
