--- a/src/app/core/components/loader/loader.component.css
+++ b/src/app/core/components/loader/loader.component.css
@@ -1,16 +1,14 @@
 :host {
- height: 100vh;
-    width:100vw;  
+    position: fixed;
+  inset: 0;
     background-color: rgba(255, 255, 255);
     z-index: 5;
-      position: fixed;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
 
 .fa-spin-pulse {
     font-size: 68px;
     color: var(--color-blue);
-      position: fixed;
-      left: 50%;
-    top: 50%;
-     transform: translate(-50%, -50%);
 }
