create alt pipe and improve images loading

--- a/src/app/pages/casos/casos.component.html
+++ b/src/app/pages/casos/casos.component.html
@@ -2,10 +2,10 @@
       <section class="centered-section cases">
       <h1 class="page-title">Trabajos realizados</h1>
       <ul class="cases-grid">
-        <li class="case-container" *ngFor="let case of cases; let i = index"><img (click)="selectCase(i)" class="case-image" [src]="case" alt="letrero-realizado-por-rotulos-learoy"></li>
+        <li class="case-container" *ngFor="let case of cases; let i = index"><img (click)="selectCase(i)" class="case-image" [src]="case" [alt]="case | alt"></li>
       </ul>  
       <figure *ngIf="selectedCase" class="image-zoom-container">
-      <img loading="lazy" class="case-image-zoom" [src]="selectedCase" alt="cartel-hecho-por-rotulos-learoy">
+      <img loading="lazy" decoding="async" class="case-image-zoom" [src]="selectedCase" [alt]="selectedCase | alt">
       <i (click)="closeImageZoom()" class="fa-solid fa-square-xmark"></i>      
     </figure>
     </section>
