--- a/src/app/shared/cards/cards.component.html
+++ b/src/app/shared/cards/cards.component.html
@@ -1,6 +1,6 @@
 <ul [ngClass]="cardsClass" *ngIf="cardElements">
 <li class="card-figure" [ngClass]="getCardClass(element)" *ngFor="let element of cardElements | order" (click)="selectElement(element)">
-    <img class="card-image" [src]="imagePrefix+getSrcImage(element)" [alt]="element.name" />
+    <img class="card-image" [src]="imagePrefix+getSrcImage(element)" [alt]="getSrcImage(element) | alt" />
      <h3 class="element-title centered-text">{{ element.name }}</h3>
   </li>
 </ul>
