--- a/src/app/pages/aviso-legal/aviso-legal.component.html
+++ b/src/app/pages/aviso-legal/aviso-legal.component.html
@@ -7,7 +7,8 @@
 <p>{{contactDetails.longName}} con los siguientess datos fiscales:</p>
 <ul>
     <li>Denominación social: {{contactDetails.longName}} (en adelante, {{contactDetails.shortName}})</li>
-    <li>Domicilio social y dirección postal: {{contactDetails.address1}} - {{contactDetails.address2}}</li>
+    <li>Domicilio social: C/Valdeón 22 - 28947 Fuenlabrada, Madrid</li>
+    <li>Dirección postal: {{contactDetails.address1}} - {{contactDetails.address2}}</li>
     <li>Dirección de correo electrónico: {{contactDetails.email}}</li>
     <li>Código de Identificación Fiscal: {{contactDetails.cif}}</li>
 </ul>
