--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -7,7 +7,7 @@
         <p class="contact-phone-email">916 158 981 / 642 678 199</p>
         <p class="contact-phone-email">rotulos&#64;learoyled.com</p>
         <p>Domingo a Viernes: 10:00 - 19:00 h (solo cerramos sábados)</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.2550268248006!2d-3.751330123498432!3d40.27008476455096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418a98ca619e93%3A0x9324b38fdd76f1cf!2sC.%20Valde%C3%B3n%2C%2024%2C%2028947%20Fuenlabrada%2C%20Madrid!5e0!3m2!1sen!2ses!4v1720104881549!5m2!1sen!2ses" 
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3044.13326209325!2d-3.763292123498352!3d40.272789864386645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd418a946548e567%3A0x97e3a7f7ddf11cea!2sC.%20del%20Cincel%2C%206%2C%20nave%2025%2C%2028946%20Fuenlabrada%2C%20Madrid!5e0!3m2!1sen!2ses!4v1753884113396!5m2!1sen!2ses" 
         width="500" height="350" 
         allowfullscreen
         referrerpolicy="no-referrer-when-downgrade"
