--- a/src/app/core/components/loader/loader.component.css
+++ b/src/app/core/components/loader/loader.component.css
@@ -1,3 +1,8 @@
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 :host {
     position: fixed;
   inset: 0;
@@ -8,7 +13,8 @@
      align-items: center;
 }
 
-.fa-spin-pulse {
+.fa-compass-drafting {
     height: 68px;
     color: var(--color-blue);
+      animation: spin 1s infinite linear;
 }
